--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Braddy"
+      content="Braddy's personal website"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
